@@ -9,10 +9,13 @@ const builder = (new Builder())
           .Function("i")
           .Function("j")
           .Function("k")
+          .Function("local_read")
       .End()
       .Code()
-        .Function("h", { params: ["anyref"], ret: "anyref" })
+        .Function("h", { params: ["anyref"], ret: "anyref" }, ["anyref"])
           .GetLocal(0)
+          .SetLocal(1)
+          .GetLocal(1)
         .End()
 
         .Function("i", { params: [], ret: "anyref" })
@@ -27,6 +30,11 @@ const builder = (new Builder())
 
         .Function("k", { params: [], ret: "i32" })
             .RefNull()
+            .RefIsNull()
+        .End()
+
+        .Function("local_read", { params: [], ret: "i32" }, ["anyref"])
+            .GetLocal(0)
             .RefIsNull()
         .End()
       .End();
@@ -51,6 +59,7 @@ assert.eq(instance.exports.j(null), 1)
 assert.eq(instance.exports.j(undefined), 0)
 
 assert.eq(instance.exports.k(), 1)
+assert.eq(instance.exports.local_read(), 1)
 
 assert.eq(obj.test, "hi")
 const obj2 = instance.exports.h(obj)
