@@ -1,3 +1,12 @@
+2019-05-30  Justin Michaud  <justin_michaud@apple.com>
+
+        oss-fuzz: jsc: Issue 15016: jsc: Abrt in JSC::Wasm::AirIRGenerator::addLocal (15016)
+        https://bugs.webkit.org/show_bug.cgi?id=198355
+
+        Reviewed by Saam Barati.
+
+        * wasm/references/is_null.js:
+
 2019-05-30  Stephan Szabo  <stephan.szabo@sony.com>
 
         [PlayStation] Skip additional tests on PlayStation
